New experimental start script.